fix(navigation): prevent focus and selection of invisible items using tab

--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -284,6 +284,10 @@ header {
         padding: 0 pxToRem(8);
     }
 
+    &:not(.active) {
+        visibility: hidden; // prevents focus and selection of invisible items using tab
+    }
+
     &.active {
         transition: height 0.2s ease;
         height: 100%;
